# lee_csv

./: Cargo.toml  Cuotas.csv  README.md  pilotos.rs  salidas.txt
src/: main.rs
