[package]
name = "LeeCSV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde_derive = "1.0.136"
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [ "serde" ]
